# mydra

./: .gitignore  .gitmodules  08c9rirlw5r7s77qwilwh19v5s5xk63q-python3.8-geopandas-0.8.1.drv  2dvk2gjk8jjld63gz6wk27f3p1r1kq3k-flatbuffers-1.12.0.drv  404.html  56dkzw4c8dapcv7ysq2lmqx71mi2k3hc-python3.9-aiomysql-0.0.21.drv  9dwjzyhh33p3rl473i0ymbk6f1w4zl3x-python3.8-typing-inspect-0.6.0.drv  9s13dglsl0vqrmz32y4h56a5a552hn5n-python3.8-fixtures-3.0.0.drv  9yw2s0hl6kyzivfi55n1hmnk9z81vaz7-955d141662c68d3d61aa50a162b39e656684c208.patch.drv  LICENSE  README.md  TODO  ab4cvx37wrrilrc51q3zsmcya1a8a3m2-python3.9-pyerfa-1.7.1.1.drv  adw5hwxx9h7b74ii6cy0wjxxys2ximpr-python3.9-imageio-ffmpeg-0.4.2.drv  c1cg9rfag4sfr77qinqmwa0xys815s2a-python3.8-imbalanced-learn-0.7.0.drv  d0drblsvmlkv2qdbcv5pyq1xzbqr3j6r-python3.8-billiard-3.6.3.0.drv  default.nix  dw96fil6pbppif6as62sp4av6vklnj4r-python3.8-pandas-1.1.5.drv  index.html  index.xml  kffxqcrjl1gg75rxqf7vx1z6xgbnh2mr-python3.8-pyerfa-1.7.1.1.drv  mqwj15lkwwrq7y315xnrig7zvnynfplb-python3.8-GPy-1.9.9.drv  mydra.yml  pyproject.toml  qs1nld911idjrk31z4pg7ydq0grynbnm-python3.8-dask-2.25.0.drv  r5dmpls6g212l6nkrkzmnkx6dbfndnja-python3.9-billiard-3.6.3.0.drv  report-25.json  report-26.json  report-27.json  report-28.json  report-29.json  report-30.json  s41i2dk6nynf7py7k4zd4l7cibcrhk5n-python3.8-imageio-ffmpeg-0.4.2.drv  s6fsglffrwjdplwszca6iw338n7q1dcv-python3.8-numexpr-2.7.2.drv  sitemap.xml  srk0hfz062jn160y8xg3id1rjvzr25jf-python3.8-paramz-0.9.5.drv  v1358snkpsyyvjlja1l8ciwgi7yyykyd-python3.8-astroquery-0.4.1.drv  (+1 more)
.github/: dependabot.yml
(+1375 files in other folders)
